Fix: Updated requirements.txt with PyMuPDF for deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ streamlit
 google-generativeai
 python-dotenv
 langchain
-PyPDF2
+PyMuPDF
 chromadb
 faiss-cpu
 langchain_google_genai
 langchain-community
+Pillow
