--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,34 @@
-# Ignore virtual environment
-venv/
+# Ignore Python cache and compiled files
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
 
-# Environment variables
+# Ignore virtual environments
+venv/
+myenv/
+
+# Ignore environment variables
 .env
 
-# FAISS index pkl file (optional if you don't want to push large index)
-faiss_index/*.pkl
+# Ignore FAISS index files (optional: keep if you want to share prebuilt index)
+faiss_index/
+# Or only pickle/index files if you want the folder structure but not data
+# faiss_index/*.pkl
+# faiss_index/*.index
 
-# VS Code settings (optional)
+# Ignore SQLite database files
+*.db
+*.db-shm
+*.db-wal
+
+# Ignore model checkpoints or large generated files
+*-checkpoints/
+
+# Ignore VS Code settings (optional, if not team-shared)
 .vscode/
+.devcontainer/
 
-# Mac and system files
+# Ignore OS generated files
 .DS_Store
 Thumbs.db
