--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,8 @@ faiss-cpu
 langchain_google_genai
 langchain-community
 Pillow
-langgraph
+langgraph 
++ langgraph==0.6.8
++ langgraph-checkpoint==2.1.1
++ langgraph-prebuilt==0.6.4
++ langgraph-sdk==0.2.9
