--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ langchain_google_genai
 langchain-community
 Pillow
 langgraph 
-+ langgraph==0.6.8
-+ langgraph-checkpoint==2.1.1
-+ langgraph-prebuilt==0.6.4
-+ langgraph-sdk==0.2.9
+langgraph==0.6.8
+langgraph-checkpoint==2.1.1
+langgraph-prebuilt==0.6.4
+langgraph-sdk==0.2.9
